# applifting-demo

./: .gitignore  Dockerfile  README.md  build-lambda-layer.sh  docker-compose.yml  pyproject.toml
aws/: build-lambda-layer.sh  lambda.py
src/python/aggregator_api/: app.py  auth.py  configuration.py  error_handlers.py  exceptions.py  main.py  models.py
src/python/aggregator_api/api/: __init__.py
src/python/aggregator_api/api/v1/: __init__.py  offers.py  products.py
src/python/aggregator_api/api/v1/common/: controllers.py  dependencies.py  schemas.py
src/python/aggregator_common/: configuration.py  exceptions.py  models.py  schemas.py
src/python/aggregator_connector/: client.py  main.py  token.py
src/python/aggregator_mock/: app.py
src/python/aggregator_watcher/: main.py  watcher.py
tests/python/test_aggregator/: conftest.py  test_models.py  utils.py
tests/python/test_aggregator/test_aggregator_api/: conftest.py  test_offers.py  test_products.py
tests/python/test_aggregator/test_aggregator_connector/: test_connector.py  test_token.py
tests/python/test_aggregator/test_watcher/: test_watcher.py
tests/python/test_aggregator_api/: conftest.py  utils.py
tests/python/test_aggregator_api/test_api/: test_products.py
