[tool.poetry]
name = "applifting-demo"
version = "0.1.0"
description = "Demo project to demostrate my python skills."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "applifting_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
SQLAlchemy = "^2.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
