[tool.poetry]
name = "applifting-demo"
version = "0.1.0"
description = "Demo project to demostrate my python skills."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "aggregator_api", from = "src/python" },
    { include = "aggregator_connector", from = "src/python" },
    { include = "aggregator_watcher", from = "src/python" },
    { include = "aggregator_common", from = "src/python" },
    { include = "aggregator_mock", from = "src/python" }
]

[tool.poetry.scripts]
applifting-demo = "aggregator_api.main:serve"
applifting-watcher = "aggregator_watcher.main:start_watch"
remote-mock = "aggregator_mock.app:serve"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
SQLAlchemy = "^2.0.0"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
fastapi-pagination = "^0.12.6"
aiohttp = "^3.8.5"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
mock = "^5.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
