[tool.poetry]
name = "applifting-demo"
version = "0.1.0"
description = "Demo project to demostrate my python skills."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app-aggregator-api", from = "src/python" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
SQLAlchemy = "^2.0.0"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
fastapi-pagination = "^0.12.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
